<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">
    <TextView
        android:text="@string/LoginText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="30pt"
        android:inputType="textEmailAddress"
        android:hint="@string/LoginHintText" />

    <TextView
        android:text="@string/PasswordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="match_parent"
        android:layout_height="30pt"
        android:inputType="textPassword"
        android:hint="@string/PasswordHintText" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="124dp"
        android:layout_height="wrap_content"
        android:text="Login" />

    <ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/flag"/>

</LinearLayout>