<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gridID"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:columnCount="2"
    android:rowCount="2"

    tools:context=".ListItemsActivity">

    <RadioButton
        android:id="@+id/radioText"

        android:layout_column="0"
        android:layout_row="0"

        android:layout_columnWeight="1"
        android:layout_gravity="fill"

        android:text="@string/wtdo"
        />

    <CheckBox
        android:id="@+id/checkText"

        android:layout_column="1"
        android:layout_row="0"

        android:layout_columnWeight="1"
        android:layout_gravity="fill"

        android:text="@string/checkText"
        />


    <Switch
        android:id="@+id/switchText"

        android:layout_column="0"
        android:layout_row="1"

        android:layout_columnWeight="1"
        android:layout_gravity="fill"

        android:text="@string/switchText"        />

    <ImageButton
        android:id="@+id/imageButText"

        android:layout_column="1"
        android:layout_row="1"

        android:layout_columnWeight="1"
        android:layout_gravity="fill"

        android:src="@android:drawable/ic_menu_camera"
        />


</GridLayout>